--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
           <div class="card">
             <h2><span class="emoji">🐾</span> Teams &amp; Mitspielerinnen</h2>
             <div class="hint">
-              Aenderungen sind nur im <strong>Trainer-Modus</strong> moeglich (Passwort: "HCW").
+              Aenderungen sind nur im <strong>Trainer-Modus</strong> moeglich (Passwort: "unknown").
               Daten werden in Supabase gespeichert und lokal im Browser zwischengespeichert.
             </div>
             <div class="teams-grid" id="teamsContainer"></div>
@@ -1571,3 +1571,4 @@
   </script>
 </body>
 </html>
+
